# MyG_E

./: CMakeLists.txt  OpenGL.sln  README.txt  imgui.ini
Debug/: OpenGL.ilk
OpenGL/: BatchRenderScene.cpp  BatchRenderScene.h  BatchRenderer.cpp  BatchRenderer.h  Camera.cpp  Camera.h  ClassDiagram.cd  Color.shader  Color3D.shader  EditCamera.cpp  EditCamera.h  FPSCamera.cpp  FPSCamera.h  Game.cpp  Game.h  Gldebug.cpp  Gldebug.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Main.cpp  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  Mesh.h  Model3D.cpp  Model3D.h  OpenGL.vcxproj  OpenGL.vcxproj.filters  Render3DScene.cpp  Render3DScene.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  (+17 more)
OpenGL/Debug/: game.obj.enc  vc141.idb
OpenGL/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  OpenGL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/x64/Debug/: vc141.idb
OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/x64/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  OpenGL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: OpenGL.iobj  OpenGL.ipdb
Resources/Cerberus_by_Andrew_Maximov/: imgui.ini
cmake/: FindAssimp.cmake  FindGlfw3.cmake  FindIrrXML.cmake  FindZLIB.cmake
dep/irrXML/lib-vc2019/: IrrXML.lib
dep/zlib/lib-vc2019/: zlibstatic.lib
examples/: 3d_scene.json  demo.json  demo2.json  imgui.ini  test.json  test_save_as.json  testing.json
src/MyG_E/: CMakeLists.txt  MyG_E - Shortcut.lnk
src/MyG_E/Core/: BatchRenderer.h  Camera.cpp  Camera.h  EditCamera.cpp  EditCamera.h  FPSCamera.cpp  FPSCamera.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  MasterController.cpp  MasterController.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model3D.cpp  Model3D.h  ProjectController.cpp  ProjectController.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkyBox.cpp  SkyBox.h  Sprite.cpp  Sprite.h  Texture.cpp  (+5 more)
src/MyG_E/Core/Camera/: Camera.cpp  Camera.h  EditCamera.cpp  EditCamera.h  FPSCamera.cpp  FPSCamera.h
src/MyG_E/Core/Light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/MyG_E/Core/Post-Processing/: Filter.h  GaussianBlur.cpp  GaussianBlur.h  SummedAreaTable.cpp  SummedAreaTable.h
src/MyG_E/Core/Texture/: BasicTexture2D.cpp  BasicTexture2D.h  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DMultisample.cpp  Texture2DMultisample.h  TextureCubMap.cpp  TextureCubMap.h
src/MyG_E/Foundation/: Game.cpp  Game.h  Gldebug.cpp  Gldebug.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  Layer.h  LayerCollection.cpp  LayerCollection.h  Main.cpp  Matrix.h  Uncopyable.h  Utility.h
src/MyG_E/Foundation/Math/: EulerAngles.cpp  EulerAngles.h  ExtraMathConstant.h  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
src/MyG_E/Foundation/Precompiled/: pch.cpp  pch.h
src/MyG_E/Foundation/Project/: MyImGui.cpp  MyImGui.h  ProjectFileReader.cpp  ProjectFileReader.h  ProjectFileWriter.cpp  ProjectFileWriter.h
src/MyG_E/Foundation/UI/: FileBrowser.cpp  FileBrowser.h
src/MyG_E/Resources/: imgui.ini
src/MyG_E/Scenes/: BatchRenderScene.cpp  BatchRenderScene.h  Menu.cpp  Menu.h  Render3DScene.cpp  Render3DScene.h  Scene.cpp  Scene.h  Texture2D.cpp  Texture2D.h
src/MyG_E/Shaders/: BasicShader.vert  Blinn-Phong.frag  Color.shader  Color3D.shader  DrawTexture.frag  Empty.frag  GaussianBlur.vert  GaussianBlurHorizontal.frag  GaussianBlurVertical.frag  Light.frag  Light.glsl  Light.vert  Normal.frag  Normal.geom  Normal.vert  Phong.frag  Phong.glsl  Phong.vert  Shader.glsl  ShadowMap.frag  ShadowMap.vert  ShadowMapDebug.frag  SkyBox.frag  SkyBox.glsl  SkyBox.vert  SummedAreaTableHorizontal.frag  SummedAreaTableVertical.frag
x64/Release/: OpenGL.ipdb
